# kobold-simd

./: Cargo.toml  DEPENDENCY-POLICY.md  PROVENANCE.md  README.md
src/: lib.rs
