[package]
name = "kobold-simd"
version = "0.1.0"
edition = "2021"
description = "SIMD-accelerated packed-decimal and zoned-decimal decode and batch record scanning (AVX2/AVX-512/NEON). // SIMD intrinsics: unsafe permitted in this crate, audited per-function."
authors = ["infinityabundance"]
license = "Apache-2.0"
repository = "https://github.com/infinityabundance/kobold-simd"
readme = "README.md"
publish = false  # empty scaffold; flip to publishable once the implementation lands

[dependencies]
# Dependency rule: kobold-* MAY depend on gnucobol-rs; gnucobol-rs MUST NOT depend on kobold-*.
# Activate when the implementation is extracted, e.g.: gnucobol-rs = "0.7"
