[package]
name = "kobold-simd"
version = "0.1.0"
edition = "2021"
description = "Batched, branch-light decoders for COMP-3 packed-decimal and zoned-decimal DISPLAY COBOL fields, shaped for SIMD/auto-vectorization, with a scalar cross-check correctness contract."
authors = ["infinityabundance"]
license = "Apache-2.0"
repository = "https://github.com/infinityabundance/kobold-simd"
readme = "README.md"

[dependencies]
# Standalone: no runtime dependencies. (Dependency rule, if any is ever added: kobold-* MAY depend
# on gnucobol-rs; gnucobol-rs MUST NOT depend on kobold-*.)
